maple-core-macro/tests/ui/element-fail.stderr
error: unexpected token
 --> $DIR/element-fail.rs:4:18
  |
4 |     template! { p.my-class#id };
  |                  ^

error: expected an assignment expression
 --> $DIR/element-fail.rs:6:24
  |
6 |     template! { button(disabled) };
  |                        ^^^^^^^^

error: expected an assignment expression
 --> $DIR/element-fail.rs:7:24
  |
7 |     template! { button(on:click) };
  |                        ^^^^^^^^

error: unexpected token
 --> $DIR/element-fail.rs:9:24
  |
9 |     template! { button(a.b.c="123") };
  |                        ^^^^^
